--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "web:preview": "npm-run-all --parallel web:examples:watch web:bundle:update:watch web:serve",
     "web:update:frontpage:code:sample": "cd website && ./node_modules/.bin/hexo generate && cp -f public/frontpage-code-sample.html ./themes/uppy/layout/partials/frontpage-code-sample.html",
     "web": "npm-run-all web:clean web:build",
-    "prepublish": "npm-run-all clean build"
+    "prepublish": "npm-run-all clean build",
+    "postinstall": "node -e \"require('fs').readdir('lib',function(e){e&&require('child_process').exec('npm run prepublish')})\""
   }
 }
